2.32/_sources/reference/tools/qbs/qbsdeps.rst.txt
.. _conan_tools_qbsdeps:

QbsDeps
=========

The ``QbsDeps`` generator produces the necessary files for each dependency to be able to use the
qbs ``Depends`` item to locate the dependencies. It can be used like:

.. code-block:: python

    from conan import ConanFile

    class App(ConanFile):
        settings = "os", "arch", "compiler", "build_type"
        requires = "hello/0.1"
        generators = "QbsDeps"


It is also possible to use ``QbsDeps`` manually in the ``generate()`` method:

.. code-block:: python

    from conan import ConanFile
    from conan.tools.qbs import QbsDeps

    class App(ConanFile):
        settings = "os", "arch", "compiler", "build_type"
        requires = "hello/0.1"

        def generate(self):
            deps = QbsDeps(self)
            deps.generate()

The dependency to the application can be added using the ``Depends`` item:

.. code-block:: js
    :caption: **project.qbs**
    :emphasize-lines: 2

    CppApplication {
        Depends { name: "hello"; version: "0.1" }
        files: "main.c"
        qbs.installPrefix: ""
        install: true
        qbsModuleProviders: "conan"
        moduleProviders.conan.installDirectory: "build"
    }

By default, for a ``hello`` requires, you need to use ``Depends { name: "hello" }``.

Note that we are setting the ``qbsModuleProviders`` property to ``"conan"`` in order to tell
Qbs that dependencies are generated by Conan. We also set the ``installDirectory`` property
of the ``conan`` module provider to ``"build"`` to tell the provider to look for generated files
in the ``build`` directory within the source directory. It is also possible to set this value from
command line.

We install dependencies using the ``conan install`` command.

.. code-block:: text

    $ conan install . --output-folder=build --build missing

Finally, we can build the project by simply calling Qbs:

.. code-block:: text

    $ qbs

Note, that Qbs helper will automatically set the ``conan.installDirectory`` property when QbsDeps
generator is used.

.. seealso::

    - Check the :ref:`Qbs helper <conan_tools_qbs_helper>` for details.


.. _QbsDeps Properties:

Properties
----------

The following properties affect the ``QbsDeps`` generator:

- **qbs_file_name**: Name of the generated Qbs module for the current package. The generator
  creates a ``<VALUE>.json`` file, and consumers use ``Depends { name: "<VALUE>" }``.
  By default this is the package name, or ``pkg_config_name`` if that property is set.
  Use ``qbs_file_name`` to override the module name.

Example:

.. code-block:: python

    def package_info(self):
        ...
        # Generates MyFirstLib.json, consumed as: Depends { name: "MyFirstLib" }
        self.cpp_info.set_property("qbs_file_name", "MyFirstLib")


Reference
---------

.. currentmodule:: conan.tools.qbs.qbsdeps

.. autoclass:: QbsDeps
    :members:
